force-app/main/default/objects/VCG_CPQ_Approval_Condition__c/VCG_CPQ_Approval_Condition__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Approval Condition</label>
    <nameField>
        <label>VCG CPQ Approval Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VCG CPQ Approval Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>