force-app/main/default/objects/VCG_CPQ_Approval_Condition__c/fields/Calculation__c.field-meta.xml
<CustomField>
    <fullName>Calculation__c</fullName>
    <label>Calculation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>