force-app/main/default/objects/VCG_CPQ_Approval_Condition__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this + Is Deployed for fully active rules. If this is set but Is Deployed is not, then this rule will be applied only to users listed in VCG_CPQ_Options.Run_Un_Deployed_Components custom setting. If Is Active is false, this rule won&apos;t run for anyone.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>