force-app/main/default/objects/VCG_CPQ_Approval_Condition__c/fields/IsDeployed__c.field-meta.xml
<CustomField>
    <fullName>IsDeployed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this + Is Active for fully active rules. If this is not set, then this rule will be applied only to users listed in VCG_CPQ_Options.Run_Un_Deployed_Components custom setting. Is Active must also be set to run whether deployed or not.</inlineHelpText>
    <label>Is Deployed</label>
    <type>Checkbox</type>
</CustomField>