force-app/main/default/objects/VCG_CPQ_Approval_Condition__c/fields/Needs_Fields__c.field-meta.xml
<CustomField>
    <fullName>Needs_Fields__c</fullName>
    <description>Code begins evaluating conditions at the Quote level. Fields and Relationships should be assigned accordingly.</description>
    <inlineHelpText>Code begins evaluating conditions at the Quote level. Fields and Relationships should be assigned accordingly.</inlineHelpText>
    <label>Needs Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>