force-app/main/default/objects/VCG_CPQ_Approval_Condition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Reason__c</columns>
    <columns>IsActive__c</columns>
    <columns>IsDeployed__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All (active)</label>
    <language>en_US</language>
</ListView>